fix: docker file adjustment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,14 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Optional (giúp debug)
+# JPA Configuration for debugging
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
 
