--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=ExamScore
 
-# Production database configuration (sử dụng environment variables)
+# Production database configuration
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -19,5 +19,5 @@ server.port=${PORT:8080}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
-# SSL configuration (nếu cần)
+# SSL configuration
 server.ssl.enabled=false
