feat: optimize query

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,3 +21,6 @@ management.endpoint.health.show-details=always
 
 # SSL configuration
 server.ssl.enabled=false
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema-view.sql
