--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,3 +24,7 @@ server.ssl.enabled=false
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema-view.sql
+
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
